# share_market

./: .gitignore  render.yaml
backend/: config.py  database.py  gen_excel_report.py  main.py  requirements.txt  seed_remote.py
backend/analysis/: daily_report.py  dividend_analyzer.py  excel_generator.py  floor_detector.py  indicators.py  live_scanner.py  predictor.py  seasonality.py  signals.py  t2_scorer.py
backend/api/: routes_analysis.py  routes_dividends.py  routes_events.py  routes_floor.py  routes_market.py  routes_portfolio.py  routes_predictions.py  routes_screener.py  routes_seasonality.py  routes_signals.py  routes_stock.py  routes_watchlist.py  schemas.py
backend/data/: cache.py  dse_sectors.json  fetcher.py  repository.py  sector_scraper.py
backend/jobs/: scheduler.py
backend/scripts/: backfill_and_analyze.py  classify_news.py  generate_analysis_excel.py  lankabd_backfill.py  lankabd_news_scraper.py  llm_daily_analyzer.py  llm_scanner.py  verify_predictions.py
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: LLMJudgePanel.tsx  PredictionTracker.tsx
frontend/src/hooks/: useAutoRefresh.ts
frontend/src/lib/: format.ts
frontend/src/pages/: AdvancedChart.tsx  BuyRadar.tsx  DailyAnalysis.tsx  Dashboard.tsx  DataMatrix.tsx  Dividends.tsx  FloorDetection.tsx  Heatmap.tsx  News.tsx  Portfolio.tsx  Screener.tsx  Seasonality.tsx  (+3 more)
gcp/: run_analysis.sh  setup_vm.sh  update_crontab.sh
mcp-dse-server/: pyproject.toml  server.py
(+23 files in other folders)
