[project]
name = "mcp-dse-server"
version = "1.0.0"
description = "MCP server for DSE Trading Assistant — connects Claude Desktop to daily stock analysis"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-dse-server = "server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
